[COLOR="DeepSkyBlue"]3.6.5 (92)[/COLOR]:
[LIST]
[*] API bump.
[/LIST]

[COLOR="DeepSkyBlue"]3.6.4 (91)[/COLOR]:
[LIST]
[*] Fixed UI error relating to the loading of saved variables for a character that is using character-based rather than account-wide configuration. (Bug reported by Gork)
[*] Added in new aliases for the old ismarked(), isfcoisprotected(), and isfcoisgear() FCOIS functions to be fco_ismarked(), fco_isprotected(), and fco_isgear(). Changed the default FCOIS/AC rules to use fco_ismarked() instead of ismarked(), etc. The old names of functions will still work, but may someday go away.
[/LIST]

[COLOR="DeepSkyBlue"]3.6.3(90)[/COLOR]:
[LIST]
[*] Fixed "Collapse All" context menu option so that it collapses the categories in the inventory when selected. (Bug reported by ZoLatKam)
[/LIST]

[COLOR="DeepSkyBlue"]3.6.2(89)[/COLOR]:
[LIST]
[*] Fixed addon settings so that you do not get a bunch of extra (possibly missing) categories listed in the Bag Settings categories drop down menu. This error was traced down to only occurring when you do not use Account-Wide - it added them anyway. (Reported most recently by Saint-Ange.)
[/LIST]

[COLOR="DeepSkyBlue"]3.6.1(88)[/COLOR]:
[LIST]
[*] Removed debug message that was reporting "throwing away collapse status of ...". (Reported by Slane320). Sorry.
[/LIST]

[COLOR="DeepSkyBlue"]3.6(87)[/COLOR]:
[LIST]
[*] Added an Appearance Setting for a new "Hidden Category Text Color" which allows you to choose what color that a category that was set as Hidden will be displayed as. This will make it readily apparent when you have turned Hidden ON for a category or for "ungrouped" which is where Others is listed as it will make the category name a different color from the non-hidden ones. (Hopefully, this will assist in telling the difference between addon bugs and unfortunate unintended settings.)
[*] Modified the storage of collapsed categories in Saved Variables so that it takes up less space in the file.
[/LIST]
