@@ -175,6 +175,7 @@ local itemTypeMap = {
 	["crown_item"] = ITEMTYPE_CROWN_ITEM,
 	["crown_repair"] = ITEMTYPE_CROWN_REPAIR,
 	["deprecated"] = ITEMTYPE_DEPRECATED,
+	["deprecated2"] = ITEMTYPE_DEPRECATED_2,	
 	["disguise"] = ITEMTYPE_DISGUISE,
 	["drink"] = ITEMTYPE_DRINK,
 	["dye_stamp"] = ITEMTYPE_DYE_STAMP,
@@ -215,7 +216,7 @@ local itemTypeMap = {
 	["recipe"] = ITEMTYPE_RECIPE,
 	["siege"] = ITEMTYPE_SIEGE,
 	["soul_gem"] = ITEMTYPE_SOUL_GEM,
-	["spellcrafting_tablet"] = ITEMTYPE_SPELLCRAFTING_TABLET,
+--	["spellcrafting_tablet"] = ITEMTYPE_SPELLCRAFTING_TABLET,  -- removed in 41??
 	["spice"] = ITEMTYPE_SPICE,
 	["style_material"] = ITEMTYPE_STYLE_MATERIAL,
 	["tabard"] = ITEMTYPE_TABARD,
@@ -262,6 +263,7 @@ local filterTypeMap = {
 	["miscellaneous"] = ITEMFILTERTYPE_MISCELLANEOUS,
 	["provisioning"] = ITEMFILTERTYPE_PROVISIONING,
 	["quest"] = ITEMFILTERTYPE_QUEST,
+	["quest_quickslot"] = ITEMFILTERTYPE_QUEST_QUICKSLOT,		-- new in 41?
 	["quickslot"] = ITEMFILTERTYPE_QUICKSLOT,
 	--["reuse"] = ITEMFILTERTYPE_REUSE,
 	["style_materials"] = ITEMFILTERTYPE_STYLE_MATERIALS,
